--- a/src/css/mainpage.css
+++ b/src/css/mainpage.css
@@ -16,4 +16,9 @@
     width: 145px;
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    padding: 8px;
+}
+
+.movie img {
+    height: 100%;
 }
