--- a/src/css/bottombar.css
+++ b/src/css/bottombar.css
@@ -22,8 +22,13 @@
     width: 64px;
     height: 89px;
     background-color: #ffffff;
-    border: 3px;
+    border-radius: 3px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 8px;
+}
+
+.movie-img img {
+    height: 100%;
 }
 
 .info-box {
