Link to SessionSeats ok; seats now being renderized from server data; BottomBar renderized in both pages with additional content in SessionSeats component - ok

--- a/src/css/seats.css
+++ b/src/css/seats.css
@@ -13,7 +13,6 @@
 }
 
 .seat {
-    background-color: #C3CFD9;
     border-radius: 33px;
     border: 1px solid #808F9D;
     width: 26px;
@@ -47,15 +46,15 @@
     border: 1px solid #808F9D;
 }
 
-.green .circle {
+.green {
     background-color: #8DD7CF;
 }
 
-.gray .circle {
+.gray {
     background-color: #C3CFD9;
 }
 
-.yellow .circle {
+.yellow {
     background-color: #FBE192;
 }
 
