--- a/src/css/seats.css
+++ b/src/css/seats.css
@@ -21,6 +21,7 @@
     justify-content: center;
     align-items: center;
     font-size: 11px;
+    cursor: pointer;
 }
 
 .legend-box {
@@ -101,4 +102,5 @@
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+    text-decoration: none;
 }
