--- a/src/css/review.css
+++ b/src/css/review.css
@@ -3,6 +3,12 @@
     font-weight: bold;
 }
 
+.review-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .choice-review-container {
     display: flex;
     flex-direction: column;
@@ -21,12 +27,12 @@
 .request-info-box h2 {
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 11px;
 }
 
 .request-info-box span {
     font-size: 22px;
-    line-height: 25px;
+    line-height: 27px;
 }
 
 .backToHome-button {
@@ -39,4 +45,17 @@
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+}
+
+.home-button {
+    width: 225px;
+    height: 42px;
+    background-color: #E8833A;
+    border-radius: 3px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    text-decoration: none;
 }
