--- a/src/css/seats.css
+++ b/src/css/seats.css
@@ -101,6 +101,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
     text-decoration: none;
+}
+
+.disabled-link {
+    pointer-events: none;
+}
+
+.buttons {
+    display: flex;
+    margin-top: 30px;
+}
+
+.reset-button {
+    height: 42px;
+    width: 42px;
+    margin-right: 20px;
+    background-color: crimson;
+    border: none;
+    border-radius: 3px;
+    color: #ffffff;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
