--- a/src/css/loading.css
+++ b/src/css/loading.css
@@ -1,10 +1,16 @@
-.loading {
-    background-color: crimson;
-    color: #ffffff;
-    font-size: 50px;
-    width: 200px;
-    height: 200px;
+.loading-page {
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+}
+
+.one-ring {
+    width: 150px;
+    margin-top: 140px;
+}
+
+.gandalf {
+    width: 300px;
+    margin-top: 20px;
 }
